Fixes text align issues in css

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
   font-size: 5em;
   margin: 0;
   color: #3f3f3f;
+  text-align: center;
 }
 
 iframe {
